# nlp-game-predictor

./: README.md  pyproject.toml
data/raw/: games.csv
notebooks/: 01_select_games.ipynb  02_nlp_pipeline_colab.ipynb  02_nlp_pipeline_colab_executed.ipynb
reports/: report.md
src/collect/: reddit.py  run_collection.py  youtube.py
src/dataset/: build.py
